# ai-survey-analysis

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: data.py  excelout.py  jobs.py  predictor.py  server.py  tracking.py
app/static/: app.js  index.html  style.css
scripts/: mcp_smoke.py
shared/: _workspaces.json
src/: config.py  mcp_app.py  server.py
src/models/: job.py  segmentation.py  survey.py  upload.py
src/routes/: health.py  segmentation.py  surveys.py  synth.py  views.py
src/services/: backtest_service.py  data.py  excel_inspector.py  excelout.py  job_registry.py  predictor.py  prompts.py  result_store.py  run_workspace.py  segmentation_agent.py  segmentation_export.py  segmentation_sanitize.py  synth_jobs.py  synth_service.py  tracking.py
src/services/skills/: design_system.md  html_report.md  pptx_deck.md
src/static/: activity.html  app.js  backtest.js  index.html  seg.css  seg.js  style.css  view.html
src/utils/: audit.py
src/utils/gunicorn_utils/: gunicorn_config.py
src/utils/logging_config/: logger.py
